# coinswap-ffi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docs.md
.github/workflows/: kotlin-api-docs.yml  kotlin-publish.yml  lint.yml  publish-apple-slices.yml  python-docs.yml  python-publish.yml  test-binding.yml  test-bindings.yml  test-kotlin.yml  test-legacy.yml  test-python.yml  test-swift.yml  test-taproot.yml  update-bindings.yml
bindings/: coinswap.py  coinswap.swift
bindings/uniffi/coinswap/: coinswap.kt
coinswap-js/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js
coinswap-js/src/: lib.rs  taker.rs  taproot_taker.rs  types.rs
coinswap-js/src/taker/: tests.rs
coinswap-kotlin/: README.md  build.gradle.kts  settings.gradle.kts
coinswap-kotlin/app/src/main/: AndroidManifest.xml
coinswap-kotlin/build-scripts/development/: build-dev-linux-jvm.sh  build-dev-linux-x86_64.sh  build-dev-macos-x86_64.sh
coinswap-kotlin/build-scripts/release/: build-release-linux-arm64_v8a.sh  build-release-linux-armeabi-v7a.sh  build-release-macos-arm64_v8a.sh  build-release-macos-armeabi-v7a.sh  build-release-win-arm64_v8a.sh  build-release-win-armeabi-v7a.sh
coinswap-kotlin/lib/: build.gradle.kts
coinswap-kotlin/lib/src/main/kotlin/org/coinswap/: coinswap.kt
coinswap-kotlin/lib/src/test/kotlin/coinswap/: StandardSwap.kt  TaprootSwap.kt
coinswap-kotlin/lib/src/test/kotlin/org/coinswap/: StandardSwap.kt  TaprootSwap.kt
coinswap-kotlin/src/test/kotlin/coinswap/examples/: AndroidExampleReference.kt
coinswap-kotlin/test/: AndroidExample.kt  WalletActivity.kt
coinswap-kotlin/uniffi/coinswap/: coinswap.kt  uniffi-bindgen.d
coinswap-napi/: .gitattributes  .gitignore  Cargo.toml  README.md  docs.md  index.d.ts  index.js  package.json
coinswap-napi/.github/workflows/: CI.yml
coinswap-napi/src/: lib.rs  taker.rs  taproot_taker.rs  types.rs  wallet.rs
coinswap-python/: .gitignore  README.md  coinswap.py  pyproject.toml
coinswap-python/build-scripts/development/: build-dev-linux-x86_64.sh  build-dev-macos-x86_64.sh
coinswap-python/build-scripts/release/: build-release-linux-aarch64.sh  build-release-linux-x86_64.sh  build-release-macos-aarch64.sh  build-release-macos-x86_64.sh  build-release-win-amd64.sh  build-release-windows-x86_64.sh
coinswap-python/docs/: api.rst  conf.py  index.rst
coinswap-python/src/coinswap/: __init__.py
coinswap-python/test/: coinswap.py  standard_swap.py  taproot_swap.py
coinswap-react-native/: .gitignore  CoinswapReactNative.podspec  README.md  jest.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json  ubrn.config.yaml
coinswap-react-native/__tests__/: live.standard-swap.test.ts  live.taproot-swap.test.ts  liveTestHelpers.ts  react-native-mock.ts
coinswap-react-native/android/: build.gradle  consumer-rules.pro  gradle.properties
coinswap-react-native/android/src/main/: AndroidManifest.xml
coinswap-react-native/android/src/main/java/org/coinswap/reactnative/: CoinswapModule.kt  CoinswapPackage.kt
coinswap-react-native/build-scripts/development/: build-dev-android-x86_64.sh  build-dev-ios.sh
coinswap-react-native/build-scripts/release/: build-release-android-arm64_v8a.sh  build-release-android-armeabi-v7a.sh  build-release-ios.sh
coinswap-react-native/ios/: Coinswap.mm  Coinswap.swift
coinswap-react-native/plugin/: index.js  utils.js  withAndroid.js  withBinaryArtifacts.js  withIOS.js
coinswap-react-native/src/: NativeCoinswap.ts  index.ts
coinswap-react-native/tests/jest/: live.standard-swap.test.ts  live.taproot-swap.test.ts  liveTestHelpers.ts  react-native-mock.ts
coinswap-react-native/tests/native/: android-smoke-test.sh  swift-smoke-test.sh
coinswap-ruby/: README.md  coinswap.rb
coinswap-ruby/build-scripts/development/: build-dev-linux-x86_64.sh  build-dev-macos-x86_64.sh
coinswap-ruby/build-scripts/release/: build-release-linux-aarch64.sh  build-release-linux-x86_64.sh  build-release-macos-aarch64.sh  build-release-macos-x86_64.sh
coinswap-ruby/test/: complete_example.rb  rails_integration_example.rb  standard_swap.rb
coinswap-swift/: .gitignore  CoinswapFFI.modulemap  README.md  build-xcframework-ci.sh  build-xcframework-dev.sh  build-xcframework.sh  coinswap.swift  coinswapFFI.h  libcoinswap_ffi.d
coinswap-swift/Tests/CoinswapTests/: LiveStandardSwapTests.swift  LiveTaprootSwapTests.swift  LiveTestSupport.swift
coinswap-swift/test/: SwiftUIExample.swift  iOSExample.swift
coinswap-uniffi/: .gitignore  Cargo.toml  README.md  docs.md  ffi-test-setup
coinswap-uniffi/bindings/: coinswap.py  coinswap.swift  coinswapFFI.h  coinswapFFI.modulemap
coinswap-uniffi/bindings/kotlin/uniffi/coinswap/: coinswap.kt
coinswap-uniffi/bindings/python/: coinswap.py  libcoinswap_ffi.d  uniffi-bindgen.d
coinswap-uniffi/bindings/ruby/: coinswap.rb
coinswap-uniffi/bindings/swift/: coinswap.swift  coinswapFFI.h
coinswap-uniffi/bindings/uniffi/coinswap/: coinswap.kt
coinswap-uniffi/src/: lib.rs  taker.rs  taproot_taker.rs  types.rs  wallet.rs
coinswap-uniffi/src/tests/: docker_helpers.rs  mod.rs  taker_methods.rs
coinswap-uniffi/tests/kotlin/: TakerMethodsTest.kt  build.gradle.kts  settings.gradle.kts
coinswap-uniffi/tests/python/: setup_makers.sh  test.py
ffi-commons/: Cargo.toml  README.md  create_bindings.sh  ffi-docker-setup  signet-docker-script  uniffi.toml
ffi-commons/src/: lib.rs  taker.rs  taproot_taker.rs  types.rs
ffi-commons/src/tests/: mod.rs  taker_methods.rs  taproot_taker_methods.rs
src/: lib.rs  taker-napi.rs  taker.rs  wallet-napi.rs  wallet.rs
