
[package]
authors = ["Neoz666 <neoz.blockchain@gmail.com>"]
edition = "2021"
name = "coinswap_napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
coinswap = { path = "../../coinswap" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
log = "0.4.28"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
