[package]
name = "coinswap-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "coinswap_ffi"

[features]
integration-test = []

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29.4", features = [ "cli" ] }
coinswap = { path = "/home/neo/Programming/work/coinswap" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.32.7" 
bitcoind = "0.36.1"
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }
