[package]
name = "coinswap-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "coinswap_ffi"

[features]
default = []

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29.4", features = [ "cli" ] }
coinswap = { git = "https://github.com/citadel-tech/coinswap.git" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.32.7" 
bitcoind = "0.36.1"
hex = "0.4"
log = "0.4.29"

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }

[dev-dependencies]
env_logger = "0.10"
